// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoboxItem InfoboxItem - base 1`] = `
InfoboxTemplate {
  "name": "Infobox Item",
  "params": Object {
    "alchable": true,
    "bankable": false,
    "equipable": false,
    "examine": "Examine text.",
    "exchange": true,
    "id": "1234",
    "image": MediaWikiFile {
      "children": undefined,
      "fileName": "Test Item.png",
      "options": undefined,
    },
    "members": true,
    "name": "Test Item",
    "noteable": false,
    "options": Array [
      "Test Action",
    ],
    "placeholder": false,
    "quest": "No",
    "release": undefined,
    "stackable": false,
    "tradeable": true,
    "update": undefined,
    "value": 0,
    "weight": "0.000",
  },
}
`;

exports[`InfoboxItem InfoboxItem - combined items with different alchable values 1`] = `
InfoboxTemplate {
  "name": "Infobox Item",
  "params": Array [
    Object {
      "alchable": true,
      "bankable": false,
      "equipable": false,
      "examine": "Examine text.",
      "exchange": true,
      "id": "1234",
      "image": MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item.png",
        "options": undefined,
      },
      "members": true,
      "name": "Test Item (variant 1)",
      "noteable": false,
      "options": Array [
        "Test Action",
      ],
      "placeholder": false,
      "quest": "No",
      "release": undefined,
      "stackable": false,
      "tradeable": true,
      "update": undefined,
      "value": 0,
      "weight": "0.000",
    },
    Object {
      "alchable": false,
      "bankable": false,
      "equipable": false,
      "examine": "Examine text.",
      "exchange": true,
      "id": "1235",
      "image": MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item (2).png",
        "options": undefined,
      },
      "members": true,
      "name": "Test Item (variant 2)",
      "noteable": false,
      "options": Array [
        "Test Action",
      ],
      "placeholder": false,
      "quest": "No",
      "release": undefined,
      "stackable": false,
      "tradeable": true,
      "update": undefined,
      "value": 0,
      "weight": "0.000",
    },
  ],
}
`;

exports[`InfoboxItem InfoboxItem - combined items with different placeholder values 1`] = `
InfoboxTemplate {
  "name": "Infobox Item",
  "params": Array [
    Object {
      "alchable": true,
      "bankable": false,
      "equipable": false,
      "examine": "Examine text.",
      "exchange": true,
      "id": "1236",
      "image": MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item.png",
        "options": undefined,
      },
      "members": true,
      "name": "Test Item (variant 1)",
      "noteable": false,
      "options": Array [
        "Test Action",
      ],
      "placeholder": false,
      "quest": "No",
      "release": undefined,
      "stackable": false,
      "tradeable": true,
      "update": undefined,
      "value": 0,
      "weight": "0.000",
    },
    Object {
      "alchable": true,
      "bankable": true,
      "equipable": false,
      "examine": "Examine text.",
      "exchange": true,
      "id": "1237",
      "image": MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item (2).png",
        "options": undefined,
      },
      "members": true,
      "name": "Test Item (variant 2)",
      "noteable": false,
      "options": Array [
        "Test Action",
      ],
      "placeholder": true,
      "quest": "No",
      "release": undefined,
      "stackable": false,
      "tradeable": true,
      "update": undefined,
      "value": 0,
      "weight": "0.000",
    },
  ],
}
`;

exports[`InfoboxItem InfoboxItem - with alchable=false (NO_ALCHABLE_PARAM=1) 1`] = `
InfoboxTemplate {
  "name": "Infobox Item",
  "params": Object {
    "alchable": false,
    "bankable": false,
    "equipable": false,
    "examine": "Examine text.",
    "exchange": true,
    "id": "1234",
    "image": MediaWikiFile {
      "children": undefined,
      "fileName": "Test Item.png",
      "options": undefined,
    },
    "members": true,
    "name": "Test Item",
    "noteable": false,
    "options": Array [
      "Test Action",
    ],
    "placeholder": false,
    "quest": "No",
    "release": undefined,
    "stackable": false,
    "tradeable": true,
    "update": undefined,
    "value": 0,
    "weight": "0.000",
  },
}
`;

exports[`InfoboxItem InfoboxItem - with stack variants 1`] = `
InfoboxTemplate {
  "name": "Infobox Item",
  "params": Object {
    "alchable": true,
    "bankable": false,
    "equipable": false,
    "examine": "Examine text.",
    "exchange": true,
    "id": "1234",
    "image": Array [
      MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item 1.png",
        "options": undefined,
      },
      MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item 10.png",
        "options": undefined,
      },
      MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item 20.png",
        "options": undefined,
      },
      MediaWikiHTML {
        "attributes": undefined,
        "children": undefined,
        "options": undefined,
        "tag": "br",
      },
      MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item 30.png",
        "options": undefined,
      },
      MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item 40.png",
        "options": undefined,
      },
      MediaWikiFile {
        "children": undefined,
        "fileName": "Test Item 50.png",
        "options": undefined,
      },
    ],
    "members": true,
    "name": "Test Item",
    "noteable": false,
    "options": Array [
      "Test Action",
    ],
    "placeholder": false,
    "quest": "No",
    "release": undefined,
    "stackable": false,
    "tradeable": true,
    "update": undefined,
    "value": 0,
    "weight": "0.000",
  },
}
`;

exports[`InfoboxItem InfoboxItem - with stack variants that are all 0 1`] = `
InfoboxTemplate {
  "name": "Infobox Item",
  "params": Object {
    "alchable": true,
    "bankable": false,
    "equipable": false,
    "examine": "Examine text.",
    "exchange": true,
    "id": "1234",
    "image": MediaWikiFile {
      "children": undefined,
      "fileName": "Test Item.png",
      "options": undefined,
    },
    "members": true,
    "name": "Test Item",
    "noteable": false,
    "options": Array [
      "Test Action",
    ],
    "placeholder": false,
    "quest": "No",
    "release": undefined,
    "stackable": false,
    "tradeable": true,
    "update": undefined,
    "value": 0,
    "weight": "0.000",
  },
}
`;

exports[`InfoboxItem InfoboxItem - with wearpos1 >= 0 1`] = `
InfoboxTemplate {
  "name": "Infobox Item",
  "params": Object {
    "alchable": true,
    "bankable": false,
    "equipable": true,
    "examine": "Examine text.",
    "exchange": true,
    "id": "1234",
    "image": MediaWikiFile {
      "children": undefined,
      "fileName": "Test Item.png",
      "options": undefined,
    },
    "members": true,
    "name": "Test Item",
    "noteable": false,
    "options": Array [
      "Test Action",
    ],
    "placeholder": false,
    "quest": "No",
    "release": undefined,
    "stackable": false,
    "tradeable": true,
    "update": undefined,
    "value": 0,
    "weight": "0.000",
  },
}
`;
